[tool.poetry]
name = "missmate"
version = "0.1.0"
description = "Simple functions to complement matplotlib"
authors = ["Thijs van der Plas"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vdplasthijs/missmat"
homepage = "https://github.com/vdplasthijs/missmat"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
    ]
    
[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.1"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"